# tiny-rag-warmup

./: .dockerignore  .env.example  .gitignore  BRANCH_SETUP.md  DATA_GUIDE.md  Dockerfile  INGEST_GUIDE.md  README.md  docker-compose.yml  download_financial_docs.py  eval_results.xlsx  ingest.py  process_documents.py  pyproject.toml  rag.py  requirements.txt  retrieve.py  ruff.toml
.github/workflows/: ci.yml
docs/: AUTH_GUIDE.md  CI_GUIDE.md  CODE_GUIDE.md  DOCKER_GUIDE.md  LOGGING_GUIDE.md  PRODUCTION_OPTIMIZATIONS.md  TESTING_GUIDE.md
scripts/: download_financial_docs.py  process_documents.py
src/tiny_rag/: __init__.py  api.py  eval.py  health.py  ingest.py  logging_config.py  rag.py  retrieve.py  retry_config.py
tests/: conftest.py  test_api.py  test_ingest.py  test_rag.py
