[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-rag-warmup"
version = "0.1.0"
description = "RAG pipeline for financial 10-K documents"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "tiktoken",
    "sentence-transformers",
    "pgvector",
    "psycopg2-binary",
    "ollama",
    "fastapi",
    "uvicorn",
    "pandas",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["src"]
